1
/root/.openclaw/workspace/capnp-ts/src/core/list.ts:7
import { decodePointer, PointerTag, ListPointer, ElementSize } from './pointer.js';
                                    ^
SyntaxError: The requested module './pointer.js' does not provide an export named 'ListPointer'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.22.0
